<resources>
    <string name="app_name">FeedApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error_message">Error occur!! Tap to retry.</string>
    <string name="retry">Retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="likes">Likes</string>
    <string name="views">Views</string>
    <string name="sort_by">Sort BY :</string>
    <string name="filter">Filter</string>

</resources>