<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="item"
            type="com.chand.learning.feedapp.data.Post" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorBackground">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_imageview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        imageFromUrl="@{item.thumbnailImage}"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_share_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginHorizontal="@dimen/margin_medium"
        app:drawableStartCompat="@drawable/ic_share_24"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toStartOf="@id/fragment_share"
        app:layout_constraintTop_toBottomOf="@id/fragment_imageview"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="DENEME"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@{String.valueOf(item.shares)}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/fragment_share_icon"
        app:layout_constraintTop_toTopOf="@id/fragment_share_icon"
        app:layout_constraintBottom_toBottomOf="@id/fragment_share_icon"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_likes_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_like"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toStartOf="@id/fragment_share"
        app:layout_constraintTop_toBottomOf="@id/fragment_share_icon"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_likes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="DENEME"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@{String.valueOf(item.likes)}"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_likes_icon"
        app:layout_constraintBottom_toBottomOf="@id/fragment_likes_icon"
        app:layout_constraintStart_toEndOf="@id/fragment_likes_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_view_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_medium"
        app:drawableStartCompat="@drawable/ic_views"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_likes_icon"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_views"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="DENEME"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@{String.valueOf(item.views)}"
        app:layout_constraintTop_toTopOf="@id/fragment_view_icon"
        app:layout_constraintBottom_toBottomOf="@id/fragment_view_icon"
        app:layout_constraintStart_toEndOf="@id/fragment_view_icon" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>